--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Just the Docs Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
-
+url: https://samin-bjit.github.io/DevSecOps_Project_Documentation/
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
